# study

./: .gitignore  README.md
c/cmake_study/: cmake.md
c/cmake_study/calc/: CMakeLists.txt  calc.c  power.c  power.h
c/cmake_study/calc_more/: CMakeLists.txt  build.bat
c/cmake_study/calc_more_dir/: CMakeLists.txt  build.bat  calc.c
c/cmake_study/calc_more_dir/power/: CMakeLists.txt
c/cmake_study/hello_world/: CMakeLists.txt  hello_world.c
python/: AStar.py  test.py
qt/itool/: CMakeLists.txt  build.bat  mainwindow.h
